--- a/dvc.yaml
+++ b/dvc.yaml
@@ -25,7 +25,7 @@ stages:
     outs:
     - artifacts/DATA_TRANSFORMATION/processed_train.csv
     - artifacts/DATA_TRANSFORMATION/processed_test.csv
-    - models/scaler.pkl
+    - prediction_service/models/scaler.pkl
   
   model_training:
     cmd: python src/pipeline/stage_03_model_training.py
@@ -38,7 +38,7 @@ stages:
     - src/entity/config_entity.py
     - src/config/configuration.py
     outs: 
-    - models/model.pkl
+    - prediction_service/models/model.pkl
     - artifacts/MODEL_TRAINER/experiment_results.csv
 
   model_evaluation:
@@ -48,7 +48,7 @@ stages:
     - src/component/model_evaluation.py
     - configs/config.yaml
     - artifacts/DATA_TRANSFORMATION/processed_test.csv
-    - models/model.pkl
+    - prediction_service/models/model.pkl
     - src/entity/config_entity.py
     - src/config/configuration.py
     outs: 
