--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -6,8 +6,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      
+      - name: RUN dvc.yaml
+        uses: iterative/setup-cml@v1
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+        env: 
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt
+          dvc repro -v
+      
       - name: Build, Push and Release a Docker container to Heroku. 
         uses: gonuit/heroku-docker-deploy@v1.3.3 
         with:
