--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: '3.7'
         env: 
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.TOKEN_GITHUB }}
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
