--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: RUN dvc.yaml
+      - name: DVC
         uses: iterative/setup-cml@v1
         uses: actions/setup-python@v2
         with:
@@ -17,7 +17,6 @@ jobs:
         env: 
           repo_token: ${{ secrets.TOKEN_GITHUB }}
         run: |
-          pip install --upgrade pip
           pip install -r requirements.txt
           dvc repro -v
       
