--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,9 +5,9 @@ on:
 jobs:
   runs-on: ubuntu-latest
   steps:
-    uses: actions/checkout@v2
-    uses: iterative/setup-cml@v1
-    uses: actions/setup-python@v2
+    - uses: actions/checkout@v2
+    - uses: iterative/setup-cml@v1
+    - uses: actions/setup-python@v2
     with:
       python-version: '3.7'
     - name: DVC
